# AdventOfCode2025

./: .gitignore  CMakeLists.txt  LICENSE.md
Source/Application/: Main.cpp  stdafx.h
Source/Application/Application/: Application.cpp  Application.h
Source/System/: stdafx.h
Source/System/Utils/: Defines.h
Source/System/Utils/Containers/: BinaryStruct.cpp  BinaryStruct.h  Table.cpp  Table.h  Variant.cpp  Variant.h
Source/System/Utils/Drawing/: Color.cpp  Color.h
Source/System/Utils/Geometry/: Circle.cpp  Circle.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
Source/System/Utils/InputOutput/: CSVParser.cpp  CSVParser.h  ConfigReaderUtils.cpp  ConfigReaderUtils.h  File.cpp  File.h  IniParser.cpp  IniParser.h  Logger.cpp  Logger.h  UI.cpp  UI.h
Source/System/Utils/Others/: Crypto.cpp  Crypto.h  Hash.cpp  Hash.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h
Source/System/Utils/String/: String.cpp  String.h
Source/System/Utils/Time/: Time.cpp  Time.h
